First commited as before_6780_rev2